--- a/css/succeed_process.css
+++ b/css/succeed_process.css
@@ -68,6 +68,7 @@
     position: relative;
     float: left;
     cursor: pointer;
+    font-style: normal;
 }
 .progressbar .holder .labels i::before {
     position: absolute;
